# simdjson_php

./: .appveyor.yml  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  build-packagexml.php  config.m4  config.w32  docker_php7.0-alpine  docker_php7.1-alpine  docker_php7.2-alpine  docker_php7.3-alpine  docker_php7.4-alpine  docker_php8.0-alpine  docker_php8.1-alpine  docker_php8.2-alpine  package.xml  php_simdjson.cpp  php_simdjson.h  phpbench.json.dist  simdjson.c  simdjson.cpp  simdjson.stub.php  simdjson_arginfo.h
.github/workflows/: integration.yml
autoconf/: pecl.m4  php-executable.m4
benchmark/: README.md  benchmark.php  composer.json
examples/: decode.php
jsonexamples/: stringifiedphp.json
scripts/: compare_decode_results.php
src/: bindings.cpp  bindings.h  bindings_impl.h  helpers.c  helpers.h  simdjson.cpp  simdjson.h  simdjson_bindings.cpp  simdjson_bindings_defs.h
tests/: 32bit_support.phpt  64bit_support.phpt  decode_args.phpt  decode_exception.phpt  decode_integer_overflow.phpt  decode_invalid_property.phpt  decode_max_depth.phpt  decode_max_depth_memory_reduction.phpt  decode_repeat.phpt  decode_result.phpt  decode_strict_types.phpt  decode_types.phpt  depth.phpt  dump.inc  is_valid.phpt  is_valid_args.phpt  is_valid_edge_cases.phpt  key_count.phpt  key_count_args.phpt  key_count_exception.phpt  key_count_large.phpt  key_exists.phpt  key_exists_args.phpt  key_value_args.phpt  key_value_deep_string.phpt  key_value_exception.phpt  key_value_int.phpt  key_value_result.phpt  key_value_slash.phpt  simdjson.phpt  uint64_overflow.phpt
(+29 files in other folders)
